# snodus

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
i18n/: ar.json  bn.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
migrations/: 001_initial.sql
src/: config.rs  lib.rs  main.rs  state.rs
src/api/: admin.rs  health.rs  mod.rs  proxy.rs
src/auth/: middleware.rs  mod.rs
src/budget/: middleware.rs  mod.rs
src/cli/: mod.rs
src/db/: keys.rs  mod.rs  spend.rs  teams.rs  users.rs
src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs  pool.rs  router.rs  sse.rs
src/providers/translate/: anthropic_to_openai.rs  mod.rs  openai_to_anthropic.rs
src/ratelimit/: middleware.rs  mod.rs
src/spend/: counter.rs  mod.rs
static/: dashboard-base.html  i18n.js  lang-switcher.html  org-landing.html
tests/integration/: core_tests.rs
