[package]
name = "snodus-core"
version = "0.4.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "snodus-core — open source LLM gateway: proxy, auth, rate limit, budget, spend tracking"
repository = "https://github.com/42NE-Ltd/snodus"
readme = "README.md"

[[bin]]
name = "snodus"
path = "src/main.rs"

[lib]
name = "snodus_core"
path = "src/lib.rs"

[[test]]
name = "core_tests"
path = "tests/integration/core_tests.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
bytes = "1"
http = "1"
http-body-util = "0.1"
futures-util = "0.3"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
strip = true
